--- a/fm_top.html
+++ b/fm_top.html
@@ -87,22 +87,21 @@ a.button {
 </style>
 </head>
 
-<body>
+<body background="debut_light.png">
 
-<h1 align=center> Top Level Heading Placeholder</h1>
+<h1 align=center> Female (F) vs. Male (M): Largest Languages </h1>
 
 <table class="table1">
   <tr>
     <td valign="top">
-        <a href="index.html" class="button">  Main Page </a>
-        <p> Click to go back to the main page </p>
+        <a href="index.html" class="button">  Main Page </a>        
     </td>
     <td valign="top">
         <a href="about.html" class="button"> About Visualization </a>
     </td>
     <td valign="top">
         <a href="fm_bottom.html" class="button"> Reverse Distribution </a>
-        <p> Click to see the same for the smallest languages </p>
+        <p> See the same for the smallest languages </p>
     </td>
   </tr>
 </table>
