--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ a.button {
         <h1 align=center> About this visualization </h1>
     </td>
     <td valign="top">        
-    <a class="button" onclick="history.back()"> Back </a>
+    <a class="button" onclick="history.back()"> Previous Page </a>
     </td>
   </tr>
 </table>
