--- a/fm_top.html
+++ b/fm_top.html
@@ -100,7 +100,7 @@ a.button {
         <a href="about.html" class="button"> About Visualization </a>
     </td>
     <td valign="top">
-        <a href="fm_bottom.html" class="button"> Reverse Distribution </a>
+        <a href="fm_bottom.html" class="button"> Smallest Languages </a>
         <p> See the same for the smallest languages </p>
     </td>
   </tr>
@@ -110,7 +110,7 @@ a.button {
 
 <script>
 
-d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv"
+d3.tsv("languages_sex_decs.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv"
   
   if (error) throw error;
   var names = [],
@@ -139,7 +139,7 @@ d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv
       left_width = 150;
  
   x = d3.scale.log()                  // log() inst linear, +ticks
-     .domain([2, d3.max(hotdogsAll)])
+     .domain([1000000, d3.max(hotdogsAll)])
      .range([0, width]);
 
   y = function(i) { return yRangeBand * i; };
@@ -160,8 +160,8 @@ d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv
     .orient("bottom")
     //.tickSize(5)
     //.tickValues(x.ticks(5))
-    //.tickFormat()
-    .ticks(10, d3.format("9.2r"));
+    .tickFormat(d3.format("s"));
+    //.ticks(10, d3.format("9.2r"));
 
   chart.append("g")
     .attr("class", "x axis")
@@ -188,6 +188,7 @@ d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv
     .attr("width", x)
     .attr("height", bar_height);
 
+  var thou = d3.format(",");
   // numbers on bar1  
   chart.selectAll("text.score")
     .data(hotdogs1)
@@ -199,7 +200,7 @@ d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv
     .attr("text-anchor", "end")
     .attr("class", "score")
     .style("font-size", "16px")
-    .text(String);
+    .text(function(data) { return thou(data); });
 
   // numbers on bar2  
   chart.selectAll()
@@ -213,7 +214,7 @@ d3.tsv("data.tsv", function(error, data) {    // u can also use d3.tsv("data.tsv
     //.style("font-size", "18px")
     .attr("class", "score")
     .style("font-size", "16px")
-    .text(String);
+    .text(function(data) { return thou(data); });
 
   // language names on the left  
   chart.selectAll("text.name")
