--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ The main purpose of the final project is to demonstrate my D3.js and other visua
 <p align=center class="p1" style="font-weight: bold;"> 4. Conclusions Deduced from Dataset Analysis </p>
 
 <p align=justify class="p1"> There is a slight variation in the numbers for male and female speakers for the largest languages. The differences in the rural vs. urban ratio for the largest languages are more noticeable with the urban population prevailing for the languages spoken in Europe and America and rural - for Asian languages (e.g. compare English and Hindi). But the overall differences are not critical. </p>
-<p align=justify class="p1"> The imbalance between the categories becomes much more evident for the languages with the smallest number of speakers. There are even languages that don't have speakers in the other category or have very few speakers in it. It is evident that <b>there is a correlation</b> between the number of speakers and the two distributions in question. The less speakers there are, the more imbalanced the female vs. male and rural vs. urban distributions become with the rural category prevailing. </p>
+<p align=justify class="p1"> The imbalance between the categories becomes much more evident for the languages with the smallest number of speakers. There are even languages that don't have speakers in the other category or have very few speakers in it. It is evident that <b>there is a correlation</b> between the number of speakers and the two distributions in question. The less speakers there are, the more imbalanced the female vs. male and rural vs. urban distributions become. Further detailed analysis may discover deeper patterns. </p>
 
 <p align=center class="p1" style="font-weight: bold;"> 5. References </p>
 <ol type="1">
